[project]
name = "llm_fingerprint"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "S1M0N38", email = "bertolottosimone@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "aiofiles>=24.1.0",
  "chromadb>=0.6.3",
  "httpx>=0.28.1",
  "openai>=1.66.3",
  "pydantic>=2.10.6",
  "tqdm>=4.67.1",
]

[project.scripts]
llm-fingerprint = "llm_fingerprint.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]
task-tags = ["FIXME", "TODO", "HACK", "WARN", "PERF", "NOTE", "TEST"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.commitizen]
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
  "pyproject.toml",
  "src/llm_fingerprint/__init__.py",
  "CITATION.cff",
]
pre_bump_hooks = ["uv lock --offline"]
bump_message = "chore(release): $current_version → $new_version"
update_changelog_on_bump = true
annotated_tag = true
gpg_sign = true
major_version_zero = true
version_provider = "pep621"

[dependency-groups]
dev = ["commitizen>=4.4.1", "pre-commit>=4.1.0", "ruff>=0.10.0"]
